--- a/01 - Android/app/src/main/res/layout/activity_main.xml
+++ b/01 - Android/app/src/main/res/layout/activity_main.xml
@@ -83,4 +83,15 @@
         app:layout_constraintTop_toTopOf="@+id/btn_ir_list_view"
         app:layout_constraintVertical_bias="0.0" />
 
+    <Button
+        android:id="@+id/btn_google_maps"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:text="G Maps"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_ir_intent_implicito"
+        app:layout_constraintEnd_toStartOf="@+id/btn_ir_intent_implicito"
+        app:layout_constraintTop_toTopOf="@+id/btn_ir_intent_implicito"
+        app:layout_constraintVertical_bias="0.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
